--- a/ChasedHomeUIDesign/ChasedHomeUIDesign.csproj
+++ b/ChasedHomeUIDesign/ChasedHomeUIDesign.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.356" />
     <PackageReference Include="Xamarin.Forms.PancakeView" Version="1.3.7" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Renderers\" />
+  </ItemGroup>
 </Project>
